# mythx-models

./: .coveragerc  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst  installation.rst  modules.rst  mythx_models.base.rst  mythx_models.exceptions.rst  mythx_models.request.rst  mythx_models.response.rst  mythx_models.rst  mythx_models.util.rst
mythx_models/: __init__.py  base.py  exceptions.py  util.py
tests/: __init__.py  common.py  test_analysis.py  test_analysis_input_request.py  test_analysis_input_response.py  test_analysis_list_request.py  test_analysis_list_response.py  test_analysis_status_request.py  test_analysis_status_response.py  test_analysis_submission_request.py  test_analysis_submission_response.py  test_auth_login_request.py  test_auth_login_response.py  test_auth_logout_request.py  test_auth_logout_response.py  test_auth_refresh_request.py  test_auth_refresh_response.py  test_detected_issues_request.py  test_detected_issues_response.py  test_exception.py  test_group_creation_request.py  test_group_creation_response.py  test_group_list_request.py  test_group_list_response.py  test_group_operation.py  test_group_operation_request.py  test_group_operation_response.py  test_group_status_request.py  test_group_status_response.py  test_issue.py  test_model_validator_errors.py  test_oas_request.py  test_oas_response.py  test_project_request.py  test_project_response.py  test_severity_enum.py  (+3 more)
(+58 files in other folders)
